--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
   "homepage": "https://github.com/react-csv/react-csv#readme",
   "devDependencies": {
     "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
     "@babel/preset-stage-2": "^7.0.0",
     "@cfaester/enzyme-adapter-react-18": "^0.8.0",
     "babel-loader": "^8.0.0",
@@ -58,7 +58,6 @@
     "documentation": "^14.0.3",
     "enzyme": "^3.11.0",
     "expect": "^1.20.2",
-    "isparta-loader": "^2.0.0",
     "jsdom": "^25.0.1",
     "jsdom-global": "2.1.0",
     "mini-css-extract-plugin": "^2.9.2",
@@ -78,5 +77,10 @@
     "webpack-dev-middleware": "^7.4.2",
     "webpack-dev-server": "^5.1.0",
     "webpack-hot-middleware": "^2.13.2"
+  },
+  "overrides": {
+    "vue-template-compiler": "3.0.0",
+    "json5": "^1.0.2",
+    "markdown-to-jsx": "^7.7.0"
   }
 }
